--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -39,9 +39,11 @@
   height: 4rem;
 }
 
-h1 {
-  margin-top: -1.5rem;
+.title {
+  margin: -1rem auto;
   color: hsl(var(--txt));
+  font-weight: bold;
+  font-size: 1.8rem;
 }
 
 .task-head {
